fix: remove favicon console error

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loop Conditionals</title>
     <script src="loops-conditionals/conditionals/exercise_00.js" defer></script>
-    <script src="loops-conditionals/conditionals/exercise_01.js"defer ></script>
+    <script src="loops-conditionals/conditionals/exercise_01.js" defer ></script>
     <script src="loops-conditionals/conditionals/exercise_02.js" defer></script>
-    <script src="loops-conditionals/loops/exercise_00.js"defer ></script>
+    <script src="loops-conditionals/loops/exercise_00.js" defer ></script>
     <script src="loops-conditionals/loops/exercise_01.js" defer></script>
     <script src="loops-conditionals/loops/exercise_02.js" defer></script>
     <script src="loops-conditionals/while/exercise_00.js" defer></script>
     <script src="loops-conditionals/while/exercise_01.js" defer></script>
     <script src="loops-conditionals/while/exercise_02.js" defer></script>
+    <link rel="icon" href="data:," />
 </head>
 <body>
     
